--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/hershyheilpern/API_Request/issues"
   },
-  "homepage": "https://github.com/hershyheilpern/API_Request#readme"
+  "homepage": "https://github.com/hershyheilpern/API_Request#readme",
+  "dependencies": {
+    "axios": "^1.6.2"
+  }
 }
