--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/hershyheilpern/API_Request#readme",
   "dependencies": {
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "uuid": "^9.0.1"
   }
 }
